# BookStoreAPI

./: .env  .gitignore  README.md  alembic.ini  bookstore-api.dockerfile  docker-compose.yml  docker-stack.yml  pyproject.toml  school-api.dockerfile  start.sh  test-start.sh  test_start.sh
alembic/: env.py
alembic/data/: users.json
alembic/versions/: 0013ba7bc910_adding_book_table.py  7b31fff34d83_creating_a_relationship_between_the_.py  859abfa0e494_adding_the_relationship_between_books_.py  9d9670b49f43_.py  bc3c3f18dc3f_adding_user_book_relationship.py  cb0bb21c55cc_.py
bookstore/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py  utils.py
bookstore/api/: deps.py
bookstore/core/: config.py
bookstore/crud/: __init__.py  base.py  crud_book.py  crud_user.py  crud_user_book.py
bookstore/db/: base.py  base_class.py  init_db.py  session.py
bookstore/models/: __init__.py  book.py  user.py  user_book.py
bookstore/schemas/: __init__.py  book.py  user.py  user_book.py
bookstore/scripts/: test.sh
bookstore/tests/: conftest.py
schoolapi/: backend_pre_start.py  initial_data.py  main.py  test_pre_start.py  tests_pre_start.py  utils.py
schoolapi/api/: deps.py
schoolapi/core/: config.py  security.py
schoolapi/crud/: base.py  crud_user.py  users.py
schoolapi/db/: base.py  base_class.py  db_setup.py  init_db.py  session.py
schoolapi/enums/: UserEnum.py
schoolapi/models/: book.py  user.py  user_book.py
schoolapi/schemas/: __init__.py  msg.py  token.py  user.py
schoolapi/tests/: conftest.py
scripts/: test.sh
(+20 files in other folders)
