[tool.poetry]
name = "schoolapi"
version = "0.1.0"
description = ""
authors = ["ReyEduardo836 <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.0"
asyncpg = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
