[tool.poetry]
name = "schoolapi"
version = "0.1.0"
description = ""
authors = ["ReyEduardo836 <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.0"
asyncpg = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.1.0"
emails = "^0.6"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
